[gd_scene load_steps=11 format=3 uid="uid://cjkeemu421bdp"]

[ext_resource type="Script" uid="uid://dthf7l17t1uuo" path="res://scene/main_menu/main_menu.gd" id="1_vny3a"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="2_kvq8n"]
[ext_resource type="Texture2D" uid="uid://bhfksmwkbyokj" path="res://asset/target.png" id="3_kvq8n"]
[ext_resource type="ButtonGroup" uid="uid://dp07g88ksxgao" path="res://scene/main_menu/main_menu_button_group.tres" id="3_lt21p"]
[ext_resource type="Texture2D" uid="uid://17lqhonty0kd" path="res://asset/stack.target.png" id="5_wbtty"]
[ext_resource type="Texture2D" uid="uid://d8ndtq26ms0q" path="res://asset/gamecontroller.png" id="6_cta3x"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="7_lt21p"]
[ext_resource type="Texture2D" uid="uid://dgj6gqxjtlu0a" path="res://asset/gear.png" id="7_tm7m5"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="8_kvq8n"]
[ext_resource type="AudioStream" uid="uid://ci4xowhem06dc" path="res://audio/radar-beeping.mp3" id="12_bj3ug"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vny3a")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.0
offset_top = 100.0
offset_right = 159.0
offset_bottom = 178.0
grow_horizontal = 2
theme = ExtResource("2_kvq8n")
text = "FLEX TARGET"

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="TargetsButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_kvq8n")
toggle_mode = true
button_group = ExtResource("3_lt21p")
text = "





TARGETS
"
icon = ExtResource("3_kvq8n")
icon_alignment = 1

[node name="StagesButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_kvq8n")
toggle_mode = true
button_group = ExtResource("3_lt21p")
text = "





STAGES"
icon = ExtResource("5_wbtty")
icon_alignment = 1

[node name="GamesButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_kvq8n")
toggle_mode = true
button_group = ExtResource("3_lt21p")
text = "





GAMES"
icon = ExtResource("6_cta3x")
icon_alignment = 1

[node name="OptionsButton" type="Button" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_kvq8n")
toggle_mode = true
button_group = ExtResource("3_lt21p")
text = "





OPTIONS"
icon = ExtResource("7_tm7m5")
icon_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.87058824, 0.21960784, 0.13725491, 1)
theme_override_fonts/font = ExtResource("7_lt21p")
horizontal_alignment = 1
vertical_alignment = 2

[node name="VolumeControl" parent="." instance=ExtResource("8_kvq8n")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_bj3ug")
autoplay = true
